[gd_scene load_steps=4 format=3 uid="uid://vv0q3hr2qmds"]

[ext_resource type="Script" path="res://scripts/UI/DialogueWindow.gd" id="1_51n35"]
[ext_resource type="StyleBox" uid="uid://dajvqqlk0ma4n" path="res://ui/dev_panel_generic.tres" id="1_uxi7u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtdl2"]
bg_color = Color(0.0117647, 0.129412, 0.117647, 0.0862745)

[node name="DialogueWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_51n35")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_uxi7u")

[node name="PanelContainer" type="PanelContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="Control" parent="BackgroundPanel/PanelContainer"]
layout_mode = 2

[node name="BackgroundPanel" type="Panel" parent="BackgroundPanel/PanelContainer/Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -288.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rtdl2")

[node name="DialogueContainer" type="PanelContainer" parent="BackgroundPanel/PanelContainer/Container/BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueContainer" type="RichTextLabel" parent="BackgroundPanel/PanelContainer/Container/BackgroundPanel/DialogueContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "> Rumors

Dragons are fucked up man"
scroll_following = true

[node name="Button" type="Button" parent="BackgroundPanel/PanelContainer/Container"]
layout_mode = 2
offset_left = 584.0
offset_top = 576.0
offset_right = 634.0
offset_bottom = 607.0
text = "Close"

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundPanel/PanelContainer/Container"]
layout_mode = 2
offset_left = 944.0
offset_top = 32.0
offset_right = 1184.0
offset_bottom = 544.0
horizontal_scroll_mode = 0

[node name="ResponsesContainer" type="VBoxContainer" parent="BackgroundPanel/PanelContainer/Container/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
